Fixed heart icon wrapping

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -151,8 +151,12 @@ a {
     font-style: italic;
 }
 
+.song-title .no-break {
+    white-space: nowrap;
+}
+
 .heart-icon {
-    margin-left: 4px;
+    margin-left: 8px;
     width: 10px;
     height: 10px;
     transform: translateY(0.5px);
